fix error in target attribute

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
          <h1 lang="en">BarberShop</h1>
          <p>Мы эксперты в модных мужских стрижках. Работаем быстро, осторожно и со вкусом.</p>
          <ul>
-            <li><a href="" targer="_blank" rel="noopener noreferrer">Instagram</a></li>
-            <li><a href="" targer="_blank" rel="noopener noreferrer">Youtube</a></li>
+            <li><a href="" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+            <li><a href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
         </ul>
      </section>
      <section>
@@ -141,8 +141,8 @@
     <footer>
         <p>&copy; Copyright 2020</p>
         <ul>
-            <li><a href="" targer="_blank" rel="noopener noreferrer">Instagram</a></li>
-            <li><a href="" targer="_blank" rel="noopener noreferrer">Youtube</a></li>
+            <li><a href="" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+            <li><a href="" target="_blank" rel="noopener noreferrer">Youtube</a></li>
         </ul>
     </footer>
 </body>
